--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: splash
 ---
 
 <div class="category-wrapper">
-	<h1 style="margin-top: 0px !important;"><span>MEETUPS</span></h1>
+	<h1 style="margin-bottom: 0px !important;"><span>MEETUPS</span></h1>
 
-	<div class="blog-category-box">
+	<div class="blog-category-box padding-box">
 		<div class="category-box">
 			<ul>
 				{% for post in site.posts %}
@@ -32,7 +32,7 @@ layout: splash
 <div class="category-wrapper">
 	<h1><span>WEBINARS</span></h1>
 
-	<div class="blog-category-box">
+	<div class="blog-category-box padding-box">
 		<div class="category-box">
 			<ul>
 				{% for post in site.posts %}
@@ -57,7 +57,7 @@ layout: splash
 </div>
 
 <div class="category-wrapper">
-	<h1><span>DEANS</span></h1>
+	<h1 style="margin-bottom: 40px !important;"><span>DEANS</span></h1>
 
 	<div class="blog-category-box">
 		<div class="category-box">
