splash page changes

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: splash
 ---
 
-<div class="category-wrapper">
-	<h1 style="margin-bottom: 0px !important;"><span>MEETUPS</span></h1>
+<div class="category-wrapper first-category">
+	<h1>Meetups</h1>
 
 	<div class="blog-category-box padding-box">
 		<div class="category-box">
@@ -30,7 +30,7 @@ layout: splash
 </div>
 
 <div class="category-wrapper">
-	<h1><span>WEBINARS</span></h1>
+	<h1>Webinars</h1>
 
 	<div class="blog-category-box padding-box">
 		<div class="category-box">
@@ -57,7 +57,7 @@ layout: splash
 </div>
 
 <div class="category-wrapper">
-	<h1><span>BLOG</span></h1>
+	<h1>Blog</h1>
 
 	<div class="blog-category-box padding-box">
 		<div class="category-box row-box">
@@ -86,7 +86,7 @@ layout: splash
 </div>
 
 <div class="category-wrapper">
-	<h1 style="margin-bottom: 40px !important;"><span>DEANS</span></h1>
+	<h1>Deans</h1>
 
 	<div class="blog-category-box">
 		<div class="category-box">
