--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: splash
 ---
 
 <div class="category-wrapper first-category">
-	<h1>Meetups</h1>
+	<div class="category-header"><div class="category-meetup"></div><h1>Meetup</h1></div>
 
 	<div class="blog-category-box padding-box">
 		<div class="category-box">
@@ -30,7 +30,7 @@ layout: splash
 </div>
 
 <div class="category-wrapper">
-	<h1>Webinars</h1>
+	<div class="category-header"><div class="category-webinar"></div><h1>Webinars</h1></div>
 
 	<div class="blog-category-box padding-box">
 		<div class="category-box">
@@ -57,7 +57,7 @@ layout: splash
 </div>
 
 <div class="category-wrapper">
-	<h1>Blog</h1>
+	<div class="category-header"><div class="category-blog"></div><h1>Blog</h1></div>
 
 	<div class="blog-category-box padding-box">
 		<div class="category-box row-box">
@@ -86,7 +86,7 @@ layout: splash
 </div>
 
 <div class="category-wrapper">
-	<h1>Deans</h1>
+	<div class="category-header"><div class="category-dean"></div><h1>Deans</h1></div>
 
 	<div class="blog-category-box">
 		<div class="category-box">
