dark theme changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ layout: splash
 ---
 
 <div class="category-wrapper">
-	<div class="category-header"><h1>Meetup</h1></div>
+	<div class="category-header">
+		<h1>Meetup</h1>
+		<p class="category-description">We organize technical meetups around Chennai once a month where our <b>active AI enthusiasts</b> participate, collaborate, learn and share knowledge or experience related to Artificial Intelligence.</p>
+	</div>
 
 	<div class="blog-category-box padding-box">
 		<div class="category-box">
@@ -30,7 +33,10 @@ layout: splash
 </div>
 
 <div class="category-wrapper">
-	<div class="category-header"><h1>Webinars</h1></div>
+	<div class="category-header">
+		<h1>Webinars</h1>
+		<p class="category-description">Not only physical meetups, we also conduct live webinars where our <b>active AI enthusiasts</b> attend, share and collaborate knowledge or experience related to Artificial Intelligence.</p>
+	</div>
 
 	<div class="blog-category-box padding-box">
 		<div class="category-box">
@@ -57,7 +63,10 @@ layout: splash
 </div>
 
 <div class="category-wrapper">
-	<div class="category-header"><h1>Blog</h1></div>
+	<div class="category-header">
+		<h1>Blog</h1>
+		<p class="category-description">We believe knowledge must be free. Hence, we write blog posts related to Artificial Intelligence such as Deep Learning, Machine Learning, Computer Vision, Natural Language Processing, Robotics and much more!</p>
+	</div>
 
 	<div class="blog-category-box padding-box">
 		<div class="category-box row-box">
@@ -86,7 +95,10 @@ layout: splash
 </div>
 
 <div class="category-wrapper">
-	<div class="category-header"><h1>Deans</h1></div>
+	<div class="category-header">
+		<h1>Deans</h1>
+		<p class="category-description">We are the Deans of Chennai School of AI chosen by our awesome Director, <a href="" target="_blank">Siraj Raval</a>, and our motto is to make AI accessible to anyone on this planet for free!</p>
+	</div>
 
 	<div class="blog-category-box">
 		<div class="category-box">
