--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ layout: splash
 <div class="category-wrapper">
 	<div class="category-header">
 		<h1>Deans</h1>
-		<p class="category-description">We are the Deans of Chennai School of AI chosen by our awesome Director, <a href="" target="_blank">Siraj Raval</a>, and our motto is to make AI accessible to anyone on this planet for free!</p>
+		<p class="category-description">We are the Deans of Chennai School of AI chosen by our awesome Director, <a href="https://www.youtube.com/channel/UCWN3xxRkmTPmbKwht9FuE5A" target="_blank">Siraj Raval</a>, and our motto is to make AI accessible to anyone on this planet for free!</p>
 	</div>
 
 	<div class="blog-category-box">
