--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 layout: splash
 ---
 
+<div class="headline-wrapper">
+	<div class="headline-box">
+		<div class="headline-desc">
+			<p>Next Meetup</p>
+			<ul>
+				<li>Date - January 12, 2019</li>
+				<li>Time - 2PM to 5PM</li>
+				<li>Venue - IITM Research Park, Chennai</li>
+				<li>Registeration - <a href="https://www.meetup.com/Chennai-School-of-AI/events/257926861/" target="_blank">[link]</a></li>
+			</ul>
+		</div>
+		<div class="headline-img">
+			<img src="https://drive.google.com/uc?id=1y5zCJX-9Spx_M2PxxR2ZgaxOY2wnxTLZ" />
+		</div>
+	</div>
+</div>
+
 <div class="category-wrapper">
 	<div class="category-header">
 		<h1>Meetup</h1>
