--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: splash
 <div class="headline-wrapper">
 	<div class="headline-box">
 		<div class="headline-desc">
-			<p>Next Meetup</p>
+			<p>Upcoming Meetup</p>
 			<ul>
 				<li>Date - January 12, 2019</li>
 				<li>Time - 2PM to 5PM</li>
