--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ layout: splash
 <div class="headline-wrapper">
 	<div class="headline-box">
 		<div class="headline-desc">
-			<p>Upcoming Meetup</p>
+			<p>Recent Activity (Meetup)</p>
 			<ul>
 				<li>Date - January 12, 2019</li>
 				<li>Time - 2PM to 5PM</li>
 				<li>Venue - IITM Research Park, Chennai</li>
-				<li>Registeration - <a href="https://www.meetup.com/Chennai-School-of-AI/events/257926861/" target="_blank">[link]</a></li>
+				<li>Read more [<a href="https://chnsoai.github.io/meetup-iitm-research-park/" target="_blank">here</a>]</li>
 			</ul>
 		</div>
 		<div class="headline-img">
